trying to fix issue about popup input not showing because it is behind keyboard changed position fixed to absolute

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -174,7 +174,7 @@ body{
 }
 
 .popup{
-    position: fixed; /* Sit on top of the page content */
+    position: absolute; /* Sit on top of the page content */
     display: none; /* Hidden by default */
     width: 100%; /* Full width (cover the whole page) */
     height: 100%; /* Full height (cover the whole page) */
